# DataDragons---Predicta-1.0-P220

./: pyproject.toml
Predicta 1.0 - Classify the Weather/: MLP.ipynb  Meta_Model.ipynb  P220.csv  Predicta 1.0 - Classify the Weather - Classification.ipynb  Self_training.ipynb  daily_data.csv  submission_p220.csv  submission_p220_2.csv  submission_p220_3.csv
Question - 1 - Unpredictable/: Predicta 1.0 - Predict the Unpredictable.ipynb  submission_key.csv
Question - 2 - Classify the weather/: Predicta 1.0 - Classify the weather.ipynb  daily_data.csv  submission_p220_4.csv
predicta-1-0-predict-the-unpredictable/: P220.csv  Predicta 1.0 - Predict the Unpredictable.ipynb  submission_key.csv
